Correct the navbar spacings

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -35,6 +35,11 @@ html {
     width: 5%;
 }
 
+.navbar-toggler
+{
+    color: white;
+}
+
 .nav-pills .nav-link.active {
     background: rgba(255, 0, 0, 0.267);
 }
